<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Smart House</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_hint">Must contain a minimum of 8 characters.</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="back">Back</string>
    <string name="signout">SignOut</string>
    <string name="temperature">Temperature</string>
    <string name="temperature_icon">🌡</string>
    <string name="degrees">ºC</string>
    <string name="humidity">Humidity</string>
    <string name="humidity_icon">💧</string>
    <string name="percentage">%</string>
    <string name="light_switches">Light Switches</string>
    <string name="music">Music</string>
    <string name="automatic_lights">Automatic Lights</string>
    <string name="time">Time</string>
    <string name="on">Starts at:</string>
    <string name="off">Ends at:</string>
    <string name="luminosity">Luminosity</string>
    <string name="room1">Room1</string>
    <string name="room2">Room2</string>
    <string name="room3">Room3</string>
    <string name="room4">Room4</string>
    <string name="room5">Room5</string>
</resources>