<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/a2_topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/top_app_bar"
            app:title="@string/app_name" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_marginHorizontal="32dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/a2_img_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/temperature"
                android:text="@string/temperature_icon"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/a2_text_temp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/a2_lbl_temp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/degrees" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_marginHorizontal="32dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/a2_btn_lights"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="goToLightSwitches"
            android:text="@string/light_switches" />

        <Button
            android:id="@+id/a2_btn_auto"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="goToAutomaticLights"
            android:text="@string/automatic_lights" />
    </LinearLayout>

</LinearLayout>