<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LightSwitchesActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/a3_topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="@string/light_switches" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/a3_swc_room1"
        style="@style/DefaultSwitch"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:onClick="setValues"
        android:text="@string/room1" />

    <View
        android:id="@+id/a3_divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:background="?android:attr/listDivider" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/a3_swc_room2"
        style="@style/DefaultSwitch"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:onClick="setValues"
        android:text="@string/room2" />

    <View
        android:id="@+id/a3_divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:background="?android:attr/listDivider" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/a3_swc_room3"
        style="@style/DefaultSwitch"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:onClick="setValues"
        android:text="@string/room3" />

    <View
        android:id="@+id/a3_divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:background="?android:attr/listDivider" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/a3_swc_room4"
        style="@style/DefaultSwitch"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:onClick="setValues"
        android:text="@string/room4" />

    <View
        android:id="@+id/a3_divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:background="?android:attr/listDivider" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/a3_swc_room5"
        style="@style/DefaultSwitch"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:onClick="setValues"
        android:text="@string/room5" />

    <View
        android:id="@+id/a3_divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:background="?android:attr/listDivider" />
</LinearLayout>