<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AutomaticLightsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/a4_topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="@string/automatic_lights" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/a4_swc_autolights"
        style="@style/DefaultSwitch"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:onClick="setVisibility"
        android:text="@string/automatic_lights" />

    <View
        android:id="@+id/a4_divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:id="@+id/a4_ll_autolights"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/a4_swc_time"
            style="@style/DefaultSwitch"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="setVisibility"
            android:text="@string/time" />

        <LinearLayout
            android:id="@+id/a4_ll_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="2dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/a4_text_on"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="#808080"
                    android:text="@string/on" />

                <TextView
                    android:id="@+id/a4_text_time_on"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|end"
                    android:onClick="showMaterialTimePickerOn"
                    android:textColor="#808080"
                    app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_right_24" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/a4_text_off"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="#808080"
                    android:text="@string/off" />

                <TextView
                    android:id="@+id/a4_text_time_off"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|end"
                    android:onClick="showMaterialTimePickerOff"
                    android:textColor="#808080"
                    app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_right_24" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/a4_divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:background="?android:attr/listDivider" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/a4_swc_light"
            style="@style/DefaultSwitch"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="setVisibility"
            android:text="@string/luminosity" />

        <LinearLayout
            android:id="@+id/a4_ll_light"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="2dp"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/a4_seekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/a4_text_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#808080" />
        </LinearLayout>

        <View
            android:id="@+id/a4_divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:background="?android:attr/listDivider" />
    </LinearLayout>
</LinearLayout>